<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/signInFragment">

    <!-- Auth Fragments -->
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.fetchdata.ui.fragment.SignInFragment"
        android:label="Sign In">
...
